<project xmlns="http://maven.apache.org/POM/4.0.0"
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>uk.badamson.mc</groupId>
   <artifactId>MC-des</artifactId>
   <version>1.1.0-SNAPSHOT</version>
   <organization>
      <name>Benedict Adamson</name>
   </organization>
   <licenses>
      <license>
         <name>GNU General Public License, Version 3</name>
         <url>https://www.gnu.org/licenses/gpl.html</url>
         <distribution>repo</distribution>
      </license>
   </licenses>
   <scm>
      <connection>scm:git:git@github.com:BenedictAdamson/MC-des.git</connection>
      <developerConnection>scm:git:git@github.com:BenedictAdamson/MC-des.git</developerConnection>
      <url>https://github.com/BenedictAdamson/MC-des</url>
   </scm>
   <properties>
      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
   <dependencyManagement>
      <dependencies>
         <dependency>
            <groupId>org.junit</groupId>
            <artifactId>junit-bom</artifactId>
            <version>5.5.0-M1</version>
            <type>pom</type>
            <scope>import</scope>
         </dependency>
      </dependencies>
   </dependencyManagement>
   <build>
      <plugins>
         <plugin>
            <groupId>com.github.spotbugs</groupId>
            <artifactId>spotbugs-maven-plugin</artifactId>
            <version>3.1.11</version>
            <dependencies>
               <!-- overwrite dependency on spotbugs if you want to specify 
                  the version of spotbugs -->
               <dependency>
                  <groupId>com.github.spotbugs</groupId>
                  <artifactId>spotbugs</artifactId>
                  <version>3.1.12</version>
               </dependency>
            </dependencies>
         </plugin>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>3.8.0</version>
            <configuration>
               <release>11</release>
               <testIncludes>
                  <include>**/*.java</include>
               </testIncludes>
            </configuration>
         </plugin>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-failsafe-plugin</artifactId>
            <version>3.0.0-M3</version>
         </plugin>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-javadoc-plugin</artifactId>
            <version>3.1.0</version>
            <configuration>
               <additionalJOptions>
                  <additionalJOption>-html5</additionalJOption>
               </additionalJOptions>
            </configuration>
            <executions>
               <execution>
                  <id>attach-javadocs</id>
                  <phase>package</phase>
                  <goals>
                     <goal>jar</goal>
                  </goals>
               </execution>
            </executions>
         </plugin>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-source-plugin</artifactId>
            <version>3.0.1</version>
            <executions>
               <execution>
                  <id>attach-javadocs</id>
                  <phase>package</phase>
                  <goals>
                     <goal>jar</goal>
                  </goals>
               </execution>
            </executions>
         </plugin>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <version>3.0.0-M3</version>
            <configuration>
               <!-- Ensure uses static inner test classes. -->
               <excludes>
                  <exclude />
               </excludes>
               <argLine>--add-opens
                  uk.badamson.mc.simulation/uk.badamson.mc.simulation=ALL-UNNAMED</argLine>
            </configuration>
         </plugin>
      </plugins>
   </build>
   <distributionManagement>
      <repository>
         <id>MC.repo</id>
         <name>MC Repository</name>
         <url>http://localhost:8081/repository/maven-releases/</url>
      </repository>
      <snapshotRepository>
         <id>MC-SNAPSHOT.repo</id>
         <name>MC Repository</name>
         <url>http://localhost:8081/repository/maven-snapshots/</url>
      </snapshotRepository>
   </distributionManagement>
   <dependencies>
      <dependency>
         <groupId>com.github.spotbugs</groupId>
         <artifactId>spotbugs-annotations</artifactId>
         <version>3.1.12</version>
      </dependency>
      <dependency>
         <groupId>org.hamcrest</groupId>
         <artifactId>hamcrest</artifactId>
         <version>2.1</version>
         <scope>test</scope>
      </dependency>
      <dependency>
         <groupId>org.junit.jupiter</groupId>
         <artifactId>junit-jupiter-api</artifactId>
         <scope>test</scope>
      </dependency>
      <dependency>
         <groupId>org.junit.jupiter</groupId>
         <artifactId>junit-jupiter-engine</artifactId>
         <scope>test</scope>
      </dependency>
      <dependency>
         <groupId>org.opentest4j</groupId>
         <artifactId>opentest4j</artifactId>
         <version>1.1.1</version>
         <scope>test</scope>
      </dependency>
      <dependency>
         <groupId>org.icroco</groupId>
         <artifactId>jcip-annotations</artifactId>
         <version>1.1.0</version>
      </dependency>
   </dependencies>
</project>